2025-05-04T00:58:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14816183612 # 633
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 816 1294 / 830 1308
* notice: next accum: outdated-unq outdated-all / unq all: 817 1295 / 831 1309
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-20] / [2025-05-03]

2025-05-03T00:51:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14805786093 # 632
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-03
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 815 1293 / 830 1308
* notice: next accum: outdated-unq outdated-all / unq all: 816 1294 / 830 1308
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-19] / []

2025-05-02T00:53:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14786450090 # 631
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-02
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 815 1293 / 829 1307
* notice: next accum: outdated-unq outdated-all / unq all: 815 1293 / 830 1308
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-01]

2025-05-01T00:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14767405928 # 630