@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-04-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-22T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-05-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
